--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -61,30 +61,45 @@
             
     <body>
         <main class="home-grid">
-            <h1 id="rexTempleHeading">
+            <div class="discoverImgs">
+              <h1 id="rexTempleHeading">
                 Rexburg, Idaho LDS Temple
-            </h1>
-            <img id="rexTemple" src="../images/rexTemple.jpg" alt="Rexburg Temple" width="300" height="auto" loading="lazy">
-            <h1 id="farmHeading">
+              </h1>
+              <img id="rexTemple" src="../images/rexTemple.jpg" alt="Rexburg Temple" loading="lazy">
+            </div>
+            <div class="discoverImgs">
+              <h1 id="farmHeading">
                 Farmland
-            </h1>
-            <img id="farm" src="../images/farm.jpg" alt="Farmland" width="400" height="auto" loading="lazy">
-            <h1 id="schoolHeading">
+              </h1>
+              <img id="farm" src="../images/farm.jpg" alt="Farmland" loading="lazy">
+            </div>
+            <div class="discoverImgs">
+              <h1 id="schoolHeading">
                 Brighham Young University Idaho
-            </h1>
-            <img id="school" src="../images/school.jpg" alt="BYU-School" width="400" height="auto" loading="lazy">
-            <h1 id="waterTowerHeading">
+              </h1>
+              <img id="school" src="../images/school.jpg" alt="BYU-School" loading="lazy">
+            </div>
+            <div class="discoverImgs">
+              <h1 id="waterTowerHeading">
                 Rexburg Water Tower
-            </h1>
-            <img id="waterTower" src="../images/waterTower.jpg" alt="Water Tower" width="400" height="auto" loading="lazy">
-            <h1 id="rexTabHeading">
+              </h1>
+              <img id="waterTower" src="../images/waterTower.jpg" alt="Water Tower" loading="lazy">
+            </div>
+            <div class="discoverImgs">
+              <h1 id="rexTabHeading">
                 Rexburg Tabernacle
-            </h1>
-            <img id="rexTab" src="../images/rexTab.jpg" alt="Rexburg Tabernacle" width="300" height="auto" loading="lazy">
-            <h1 id="cityHallHeading">
+              </h1>
+              <img id="rexTab" src="../images/rexTab.jpg" alt="Rexburg Tabernacle" loading="lazy">
+            </div>
+            <div class="discoverImgs">
+              <h1 id="cityHallHeading">
                 Rexburg City Courthouse
-            </h1>
-            <img id="cityHall" src="../images/cityHall.jpg" alt="Courthouse" width="400" height="auto" loading="lazy">
+              </h1>
+              <img id="cityHall" src="../images/cityHall.jpg" alt="Courthouse" loading="lazy">
+            </div>
+            <div class="numVisits">
+              <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
+            </div>
         </main>
 
         <footer>
@@ -96,7 +111,7 @@
           </div>
         </footer>
             <script src="js/main.js"></script>
-            <script src="../chamber/js/hamburger.js"></script>
+            <script src="../chamber/js/local-storage.js"></script>
             <script src="../lesson7/js/lazy.js"></script>
     </body>
 </html>
