--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -61,6 +61,9 @@
             
     <body>
         <main class="home-grid">
+          <div>
+            <p>Info about town</p>
+          </div>
             <div class="discoverImgs">
               <h1 id="rexTempleHeading">
                 Rexburg, Idaho LDS Temple
