--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -61,8 +61,17 @@
             
     <body>
         <main class="home-grid">
-          <div>
-            <p>Info about town</p>
+          <div id="rex-info">
+            <p>Rexburg is a city in Madison County, Idaho. The population was 39,409 in the 2020 census. The city is home to
+              Brighman Young University-Idaho(BYU-Idaho), a private insitution operated by The Church of Jesus Christ of Latter-day Saints(LDS Church).
+              <br><br>The city takes its name from the founder Thomas Edwin Ricks and was incorporated in 1883. It was originally named as Ricksburg, however later on it was changed to Rexburg. 
+              The first log house of the area was constructed in 1883. The Utah Northern Railroad first entered the city in 1899. The city of Rexburg is the county seat of Madison County, 
+              which was formed on February 18, 1913.
+              <br><br>In June 1976, Rexburg was severely damaged by 
+              the Teton Dam Flood. The Teton River flowed through northern Rexburg, and left most of the city underwater for several days after the Teton Dam ruptured. 
+              A museum dedicated to the Teton Dam Flood and the history of Rexburg and the area, located in the basement of the Rexburg Tabernacle, has been a major city landmark for decades.
+              <br><br>
+            </p>
           </div>
             <div class="discoverImgs">
               <h1 id="rexTempleHeading">
