--- a/chamber/index.html
+++ b/chamber/index.html
@@ -99,13 +99,18 @@
                 <img id="weather-pic"
                 src="../images/weather.jpg"
                 alt="Weather"/>
-                <p id="wind">
-                  <p>Average Temperature: <span id="averageTemp">40</span>&deg;</p>
-                  <p>Wind Speed: <span id="windSpeed">10</span>mph</p>
-                </p>
-                <p>
-                  Wind Chill: <span id="windChill"></span>&deg;
-                </p>
+                <div id="weatherText">
+                  <p id="wind">
+                    <b><p><span id="temp"></span>&deg;F</p>
+                    <p><span id="conditions"></span></p>
+                    <hr>
+                    <p>Wind Speed: <span id="windSpeed"></span> mph</p>
+                  </p>
+                  <p>
+                    Wind Chill: <span id="windChill"></span>&deg;
+                  </p>
+                  </b>
+                </div>
               </div>
             </div>
 
