--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -37,10 +37,14 @@
       </nav>
 
       <header>
-        <img id="logo" src="../images/logo.jpg" alt="website-logo" width="200">
-        <h1 class="town">Madison</h1>
-        <h1>Chamber of Commerce</h1>
-
+        <div id="flex-header">
+          <img id="logo" src="../images/logo.jpg" alt="website-logo" width="200">
+          <div id="title">
+          <h1 class="town">Madison</h1>
+          <h1>Chamber of Commerce</h1>
+          </div>
+        </div>
+        
         <div class="social">
           <a href="https://www.facebook.com/" target="_blank"
             ><img class="socialmedia"
