--- a/chamber/join.html
+++ b/chamber/join.html
@@ -39,9 +39,13 @@
         </nav>
 
         <header>
+          <div id="flex-header">
             <img id="logo" src="../images/logo.jpg" alt="website-logo" width="200">
+            <div id="title">
             <h1 class="town">Madison</h1>
             <h1>Chamber of Commerce</h1>
+            </div>
+          </div>
 
             <div class="social">
               <a href="https://www.facebook.com/" target="_blank"
