--- a/chamber/thank-you.html
+++ b/chamber/thank-you.html
@@ -67,7 +67,7 @@
         </header>
 
         <main>
-            <h1>Thank You!</h1>
+            <h1 id="thank-you">Thank You!</h1>
         </main>
 
         <footer>
