--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,6 +30,7 @@
                 <li><a href="discover.html"><b>Discover</b></a></li>
                 <li><a href="directory.html"><b>Directory</b></a></li>
                 <li><a href="join.html"><b>Join</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
               </ul>
     
            <form id="search">
@@ -74,9 +75,6 @@
                   src="../images/rexburg.jpg"
                   alt="WDD230-0rg"/>
                 </picture>
-                <!--<source media="(min-width:650px)" srcset="img_pink_flowers.jpg">
-                  <source media="(min-width:465px)" srcset="img_white_flower.jpg">
-                  <img src="img_orange_flowers.jpg" alt="Flowers" style="width:auto;"> -->
             </div>
 
             <div class="event">
