--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -26,11 +26,11 @@
         <nav>
           <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
-                <li class="active"><a href="index.html"><b>Home</b></a></li>
+                <li><a href="index.html"><b>Home</b></a></li>
                 <li><a href="discover.html"><b>Discover</b></a></li>
                 <li><a href="directory.html"><b>Directory</b></a></li>
                 <li><a href="join.html"><b>Join</b></a></li>
-                <li><a href="contact.html"><b>Contact</b></a></li>
+                <li class="active"><a href="contact.html"><b>Contact</b></a></li>
             </ul>
     
            <form id="search">
