--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,6 +29,7 @@
                 <li><a href="discover.html"><b>Discover</b></a></li>
                 <li class="active"><a href="directory.html"><b>Directory</b></a></li>
                 <li><a href="join.html"><b>Join</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
             </ul>
            <form id="search">
                 <input type="search" name="q" placeholder="Search">
