--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -28,6 +28,7 @@
               <li class="active"><a href="discover.html"><b>Discover</b></a></li>
               <li><a href="directory.html"><b>Directory</b></a></li>
               <li><a href="join.html"><b>Join</b></a></li>
+              <li><a href="contact.html"><b>Contact</b></a></li>
             </ul>
     
           <form>
