--- a/chamber/join.html
+++ b/chamber/join.html
@@ -30,6 +30,7 @@
                 <li><a href="discover.html"><b>Discover</b></a></li>
                 <li><a href="directory.html"><b>Directory</b></a></li>
                 <li class="active"><a href="join.html"><b>Join</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
             </ul>
     
            <form id="search">
