--- a/temple-inn-suites/reservations.html
+++ b/temple-inn-suites/reservations.html
@@ -65,7 +65,7 @@
 
       <footer>
         <div class="down-footer">
-          <b><p id="copyright">&copy;<span id="year"></span> Madison Chamber of Commerce</b></p>
+          <b><p id="copyright">&copy;<span id="year"></span> Temple Inn & Suites</b></p>
           <p id="name"><b>Mariah Wedel</b></p>
           <p id="class-name"><b>WDD 230 Project</b></p>
           <p id="update"><b>Last Updated: <span id="lastupdate"></span></p></b>
