--- a/temple-inn-suites/home.html
+++ b/temple-inn-suites/home.html
@@ -71,6 +71,7 @@
                   <b><p><span id="temp"></span>&deg;F</p>
                   <p><span id="conditions"></span></p>
                   <hr>
+                  <p>Humidity: <span id="humidity"></span></p>
                   <p>Wind Speed: <span id="windSpeed"></span> mph</p>
                 </p>
                 <p>
