--- a/temple-inn-suites/home.html
+++ b/temple-inn-suites/home.html
@@ -82,6 +82,9 @@
             </div>
           </div>
 
+          <div class="hotel-reservation">
+
+          </div>
       </main>
 
       <footer>
