--- a/temple-inn-suites/reservations.html
+++ b/temple-inn-suites/reservations.html
@@ -59,8 +59,41 @@
         <b><section id="banner"></section></b>
       </header>
 
-      <main>
-
+        <main id="res-main">
+            <h1 id="res-greeting">Make A Reservation Today!</h1>
+            <div id="res-layout">
+                <form id="res-box" action="thank-you.html" method="get">
+                    <fieldset>
+                        <legend>Personal:</legend>
+                        <label for="location">**Location:
+                        <input type="text" id="location" name="location" required/></label>
+                        <label for="dates">**Dates:
+                        <input type="text" id="dates" name="dates" placeholder="01/20/2022 - 01/22/2022" required /></label>
+                        <label for="room">**Number of Rooms:
+                        <input type="text" id="room" name="room" required/></label>
+                        <label for="type">**Type of Rooms:
+                        <input type="text" id="type" name="type" /></label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Personal:</legend>
+                        <label for="fname">**Full Name:
+                        <input type="text" id="fname" name="fname" required/></label>
+                        <label for="email">**Email Address:
+                        <input type="text" id="email" name="email" placeholder="example@email.com" required /></label>
+                        <label for="phone">**Phone Number:
+                        <input type="phone" id="phone" name="phone" required/></label>
+                        <label for="state">**Home State or Country:
+                            <input type="text" id="state" name="state" /></label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Special:</legend>
+                        <label for="special">Special Accommodations/Comments:
+                        <textarea id="special" name="special"></textarea></label>
+                    </fieldset>
+                    <button id="btnSubmit" type="submit">Submit Reservation</button>
+                    <input id="hiddenField" type="hidden">
+                </form>
+            </div>
       </main>
 
       <footer>
