--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li>Lesson 09: <a href="./lesson9/prophets.html">Latter-Day Prophets Cards</a></li>
                     <li>Lesson 09: <a href="chamber/wireframe.html">Directory Wireframe</a></li>
                     <li>Lesson 10: <a href="chamber/weather-api.html">Using the Weather API</a></li>
-                    <li>Lesson 11: <a href="week11.html">The Temple Inn & Suites</a></li>
+                    <li>Lesson 11: <a href="temple-inn-suites/home.html">The Temple Inn & Suites</a></li>
                 </ul>
             </div>
             <hr>
