--- a/temple-inn-suites/temple.html
+++ b/temple-inn-suites/temple.html
@@ -60,11 +60,10 @@
       </header>
 
       <main>
-        <div class="banner-box">
+        <div class="banner-img">
           <img
-            src=""
-            alt="Banner"
-          />
+            src="./images/banner.jpg"
+            alt="Banner"/>
         </div>
         <div class="home-grid">
           <h2 class="home-headline-1">Oakland, CA</h2>
@@ -103,8 +102,8 @@
           </p>
           <img
             class="home-right-img1"
-            src=""
-            alt=""
+            src="./images/oaklandTemple.jpg"
+            alt="Oakland Temple"
           />
           <h2 class="home-headline-2">Logan, UT</h2>
           <p class="home-paragraph-2">
@@ -142,8 +141,8 @@
           </p>
           <img
             class="home-left-img1"
-            src=""
-            alt=""
+            src="./images/loganTemple.jpg"
+            alt="Logan Temple"
           />
           <h2 class="home-headline-3">Rexburg, ID</h2>
           <p class="home-paragraph-3">
@@ -179,8 +178,8 @@
           </p>
           <img
             class="home-right-img2"
-            src=""
-            alt=""
+            src="./images/rexburgTemple.jpg"
+            alt="Rexburg Temple"
           />
           <h2 class="home-headline-4">St. Louis, MO</h2>
           <p class="home-paragraph-4">
@@ -211,8 +210,8 @@
           </p>
           <img
             class="home-left-img2"
-            src=""
-            alt=""
+            src="./images/stlouisTemple.jpg"
+            alt="St. Louis Temple"
           />
         </div>
       </main>
