--- a/temple-inn-suites/missionary.html
+++ b/temple-inn-suites/missionary.html
@@ -24,7 +24,7 @@
       <nav>
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
           <ul id="primaryNav">
-            <li class="active"><a href="home.html"><b>Home</b></a></li>
+            <li><a href="home.html"><b>Home</b></a></li>
             <li><a href="temple.html"><b>Temple</b></a></li>
             <li><a href="reservations.html"><b>Reservations</b></a></li>
             <li><a href="services.html"><b>Services</b></a></li>
@@ -64,73 +64,11 @@
         </div>
       </header>
 
-      <main class="home-main">
-        <div class="weather">
-            <h2 id="weather">Weather</h2>
-            <div id="weather-info">
-              <img id="weather-pic"
-              src="../images/weather.jpg"
-              alt="Weather"/>
-              <div id="weatherText">
-                <p id="wind">
-                  <b><p><span id="temp"></span>&deg;F</p>
-                  <p><span id="conditions"></span></p>
-                  <hr>
-                  <p>Humidity: <span id="humidity"></span></p>
-                  <p>Wind Speed: <span id="windSpeed"></span> mph</p>
-                </p>
-                <p>
-                  Wind Chill: <span id="windChill"></span>&deg;
-                </p>
-                </b>
-              </div>
-            </div>
-          </div>
-          <form id="reserve-now" action="reservations.html" method="get">
-            <div>
-              <button id="reserveBtn" type="submit">Make a Reservation Today!</button>
-            </div>
-          </form>
-
-        <div id="contact-info">
-          <div id="contact-box">
-            <h2>Contact Information</h2>
-            <p><b>Temple Inn & Suites </b><br>
-              Address: 4800 Montgomery Ln #300, Bethesda, MD 20814<br>
-              Phone: +1 (410)-000-0000<br>
-              Email: Example@gmail.com<br>
-            </p>
-          </div>
-        </div>
-
-        <div id="temple-info">
-          <h2>Oakland, CA Temple Info</h2>
-          <p>
-            <b>Dedicated:</b> 17-19 November 1964 by David O. McKay<br>
-            <b>Rededicated:</b> May 2019<br>
-            <b>Total Floor Area:</b> 95,000 square feet<br>
-            <b>Fun Fact:</b> This is a very unique feature of the Oakland Temple 
-            because it is the only temple in the world with a rooftop 
-            garden, and it's open to the public.<br>
-            <b>Other Info:</b> Commanding a sweeping view of the San Francisco 
-            Bay Area, the 170-foot Oakland California Temple 
-            is a highly recognized East Bay landmark. Also contains 4 ordinance rooms and seven sealing rooms.<br>
-            <br>
-            <b>Things to do:</b>
-            <ul>
-              <li>Schedule a free tour</li>
-              <li>Discover your family story</li>
-              <li>Worship with us</li>
-              <li>Art & murals</li>
-              <li>Curated gardens</li>
-              <li>Beautiful fountains</li>
-              <li>Interactive displays</li>
-              <li>Inspiring views & sunsets</li>
-              <li>Photography</li>
-            </ul>
-          </p>
-        </div>
-
+      <main>
+        <h1 class="missionary-heading">~Full-Time Temple Missionary~</h1>
+        <p id="missionary-info">
+            page that provides information and images about the suites offered at the hotel with a simple Contact Us form for more details. 
+        </p>
       </main>
 
       <footer>
