--- a/temple-inn-suites/services.html
+++ b/temple-inn-suites/services.html
@@ -60,6 +60,42 @@
       </header>
 
       <main>
+        <h2>Specialized Services</h2>
+        <p>
+          <ul>
+            <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
+            <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
+            <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+            <li>Temple history themed reception and sitting area</li>
+            <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
+            <li>A family search center that supports family search and ordinance work</li>
+            <li>What other ideas do you have?</li>
+          </ul>
+        </p>
+        <h2>Free Amenities</h2>
+        <p>
+          <ul>
+            <li>Breakfast</li>
+            <li>Exercise/workout room</li>
+            <li>Indoor pool</li>
+            <li>WiFi high-speed internet access and smart TVs</li>
+            <li>Parking</li>
+            <li>Temple shuttle</li>
+            <li>Family history consultation and family ordinance card service</li>
+          </ul>
+        </p>
+
+        <form id="reception" action="reception.html" method="get">
+          <div>
+            <button id="receptionBtn" type="submit">Reception Info</button>
+          </div>
+        </form>
+
+        <form id="missionary" action="missionary.html" method="get">
+          <div>
+            <button id="missionaryBtn" type="submit">Full-time Temple Missionary Info</button>
+          </div>
+        </form>
 
       </main>
 
