--- a/temple-inn-suites/missionary.html
+++ b/temple-inn-suites/missionary.html
@@ -66,9 +66,87 @@
 
       <main>
         <h1 class="missionary-heading">~Full-Time Temple Missionary~</h1>
-        <p id="missionary-info">
-            page that provides information and images about the suites offered at the hotel with a simple Contact Us form for more details. 
-        </p>
+            <div class="miss-grid">
+              <h2 class="miss-headline-1">Junior Suite</h2>
+              <p class="miss-paragraph-1">
+                Dining area
+                living area
+                The Junior Suite. 
+                Junior suites are smaller than a regular suite but more importantly, 
+                typically don't have a solid separation between the bedrooms and living area. 
+                These suites have small living areas that are an extension of the bedroom space 
+                and don't come with dining areas. The good part of junior suites is that they're 
+                priced lower than regular suites and often have sofa beds so you can accommodate 
+                more guests.
+              </p>
+              <img
+                class="miss-right-img1"
+                src="./images/juniorSuite.jpg"
+                alt="Junior Suite"
+              />
+              <h2 class="miss-headline-2">Residential Suite</h2>
+              <p class="miss-paragraph-2">
+                The Residential Suite. 
+                These are fully furnished suites in every sense of the word. 
+                Not only do you get a separate living room, dining room and one or 
+                more bathrooms, some suites also come with wet bars, fully stocked kitchens, 
+                in-suite washer dryer units, and even patios and terraces.
+              </p>
+              <img
+                class="miss-left-img1"
+                src="./images/residentialSuite.jpg"
+                alt="Residential Suite"
+              />
+              <h2 class="miss-headline-3">Presidential Suite</h2>
+              <p class="miss-paragraph-3">
+                The Presidential Suite. 
+                The absolute best suite in any hotel. 
+                Most hotels would usually carry only a few presidential or penthouse suites. 
+                Typically housed on the top floors, this is your ultra-lavish-architecture-digest-fancy-af 
+                suite with everything you can think of. Fabulous panoramic views, high-end toiletries, 
+                jetted tubs in bathrooms that look like spas, expansive living, dining and bedroom areas, 
+                entry foyers, private terraces and sometimes even private butlers!
+              </p>
+              <img
+                class="miss-right-img2"
+                src="./images/presidentialSuite.jpg"
+                alt="Presidential Suite"
+              />
+              <h2 class="miss-headline-4">Connecting Suite</h2>
+              <p class="miss-paragraph-4">
+                The Connecting Suite. 
+                Available only on Suiteness, connecting suites are suite configurations 
+                where more than one bedroom is connected to the living area of a suite. 
+                Some of these also feature one suite that connects to another suite. 
+                You see, most hotel suites are built with an attached room or suite that 
+                has a separate private entrance. Sadly, hotel reservation systems are 
+                outdated. So while these suites and rooms are attached,
+                they can only be sold separately and never together as a connecting suite. 
+                Until now, that is. A connecting suite is essentially the same as a 
+                regular full-sized suite that has more than one attached bedroom - only, 
+                less expensive. You're looking at anywhere between a $100 to even $1,000 
+                difference between a regular two-bedroom suite and a connecting two-bedroom 
+                suite. See what staying in a connecting suite is like with this virtual tour.
+              </p>
+              <img
+                class="miss-left-img2"
+                src="./images/connectingSuite.jpg"
+                alt="Connecting Suite"
+              />
+            </div>
+          </main>
+
+        <div id="contact-info-missionary">
+            <div id="contact-box">
+              <h2>If you have any other questions<br>Contact</h2>
+              <p id="contact-info-p"><b>Temple Inn & Suites </b><br>
+                Address: 4800 Montgomery Ln #300, Bethesda, MD 20814<br>
+                Phone: +1 (410)-000-0000<br>
+                Email: Example@gmail.com<br>
+              </p>
+            </div>
+          </div>
+
       </main>
 
       <footer>
