--- a/temple-inn-suites/services.html
+++ b/temple-inn-suites/services.html
@@ -74,7 +74,7 @@
         </p>
         <h2>Free Amenities</h2>
         <p>
-          <ul>
+          <ul id="services-info">
             <li>Breakfast</li>
             <li>Exercise/workout room</li>
             <li>Indoor pool</li>
