--- a/temple-inn-suites/temple.html
+++ b/temple-inn-suites/temple.html
@@ -68,37 +68,35 @@
         <div class="home-grid">
           <h2 class="home-headline-1">Oakland, CA</h2>
           <p class="home-paragraph-1">
-            address: 4770 Lincoln Ave
-                    Oakland CA 94602-2535
-                    United States
-            Telephone:(1)510-531-3200
-            email:
-            services: Clothing rental available
-                      No cafeteria available
-                      Patron housing available
-                      Distribution center nearby
-            history:
-            ordinance schedule: Ordinances for family names must be done in proper sequence—baptism, confirmation, 
+            <b>Address:</b> 4770 Lincoln Ave<br>
+                    Oakland CA 94602-2535<br>
+                    United States<br>
+            <b>Telephone:</b>(1)510-531-3200<br>
+            <b>Services:</b><br>
+            -Clothing rental available<br>
+            -No cafeteria available<br>
+            -Patron housing available<br>
+            -Distribution center nearby<br>
+            <b>Ordinance Schedule:</b> Ordinances for family names must be done in proper sequence—baptism, confirmation, 
             Melchizedek Priesthood ordination (males), initiatory, endowment, and then sealing. 
             Please allow sufficient time to perform all the ordinances you wish to complete during your visit. 
-            For additional help and information, please call the temple.
-            session schedule:
-            temple closure schedule: 2022
-                                    -Monday, 5 September 2022 - Monday, 19 September 2022
-                                    -Saturday, 1 October 2022
-                                    -Wednesday, 23 November 2022 (Limited Operations)
-                                    -Thursday, 24 November 2022
-                                    -Saturday, 24 December 2022
-                                    -Saturday, 31 December 2022
-                                    2023
-                                    -Monday, 13 March 2023 - Monday, 27 March 2023
-                                    -Saturday, 1 April 2023
-                                    -Tuesday, 4 July 2023
-                                    -Monday, 11 September 2023 - Monday, 25 September 2023
-                                    -Saturday, 7 October 2023
-                                    -Wednesday, 22 November 2023 (Limited Operations)
-                                    -Thursday, 23 November 2023
-            <!-- Must be stored in JSON file. -->
+            For additional help and information, please call the temple.<br>
+            <br>
+            <b>Temple Closure Schedule: <br>2022</b><br>
+                                    -Monday, 5 September 2022 - Monday, 19 September 2022<br>
+                                    -Saturday, 1 October 2022<br>
+                                    -Wednesday, 23 November 2022 (Limited Operations)<br>
+                                    -Thursday, 24 November 2022<br>
+                                    -Saturday, 24 December 2022<br>
+                                    -Saturday, 31 December 2022<br>
+                                    <b>2023</b><br>
+                                    -Monday, 13 March 2023 - Monday, 27 March 2023<br>
+                                    -Saturday, 1 April 2023<br>
+                                    -Tuesday, 4 July 2023<br>
+                                    -Monday, 11 September 2023 - Monday, 25 September 2023<br>
+                                    -Saturday, 7 October 2023<br>
+                                    -Wednesday, 22 November 2023 (Limited Operations)<br>
+                                    -Thursday, 23 November 2023<br>
           </p>
           <img
             class="home-right-img1"
@@ -107,37 +105,35 @@
           />
           <h2 class="home-headline-2">Logan, UT</h2>
           <p class="home-paragraph-2">
-            address: 175 N 300 E
-                    Logan UT 84321-4720
-                    United States
-            Telephone:(1)435-752-3611
-            email:
-            services: Clothing rental available
-                      No cafeteria available
-                      No patron housing available
-                      No distribution center nearby
-            history:
-            ordinance schedule: Ordinances for family names must be done in proper sequence—baptism, confirmation, 
+            <b>Address:</b> 175 N 300 E<br>
+                    Logan UT 84321-4720<br>
+                    United States<br>
+            <b>Telephone:</b>(1)435-752-3611<br>
+            <b>Services:</b><br> 
+            -Clothing rental available<br>
+            -No cafeteria available<br>
+            -No patron housing available<br>
+            -No distribution center nearby<br>
+            <b>Ordinance Schedule:</b> Ordinances for family names must be done in proper sequence—baptism, confirmation, 
             Melchizedek Priesthood ordination (males), initiatory, endowment, and then sealing. 
             Please allow sufficient time to perform all the ordinances you wish to complete during your visit. 
-            For additional help and information, please call the temple.
-            session schedule:
-            temple closure schedule: 2022
-                                    -Saturday, 1 October 2022
-                                    -Monday, 3 October 2022 - Monday, 17 October 2022
-                                    -Wednesday, 23 November 2022 (Limited Operations)
-                                    -Thursday, 24 November 2022
-                                    -Saturday, 24 December 2022
-                                    -Saturday, 31 December 2022 (Limited Operations)
-                                    2023
-                                    -Monday, 13 February 2023 - Monday, 27 February 2023
-                                    -Saturday, 1 April 2023
-                                    -Tuesday, 4 July 2023
-                                    -Saturday, 30 September 2023
-                                    -Monday, 2 October 2023 - Monday, 16 October 2023
-                                    -Wednesday, 22 November 2023 (Limited Operations)
-                                    -Thursday, 23 November 2023
-                                    -Saturday, 23 December 2023
+            For additional help and information, please call the temple.<br>
+            <br><b>Temple Closure Schedule: <br>2022</b><br>
+                                    -Saturday, 1 October 2022<br>
+                                    -Monday, 3 October 2022 - Monday, 17 October 2022<br>
+                                    -Wednesday, 23 November 2022 (Limited Operations)<br>
+                                    -Thursday, 24 November 2022<br>
+                                    -Saturday, 24 December 2022<br>
+                                    -Saturday, 31 December 2022 (Limited Operations)<br>
+                                    <b>2023</b><br>
+                                    -Monday, 13 February 2023 - Monday, 27 February 2023<br>
+                                    -Saturday, 1 April 2023<br>
+                                    -Tuesday, 4 July 2023<br>
+                                    -Saturday, 30 September 2023<br>
+                                    -Monday, 2 October 2023 - Monday, 16 October 2023<br>
+                                    -Wednesday, 22 November 2023 (Limited Operations)<br>
+                                    -Thursday, 23 November 2023<br>
+                                    -Saturday, 23 December 2023<br>
           </p>
           <img
             class="home-left-img1"
@@ -146,35 +142,33 @@
           />
           <h2 class="home-headline-3">Rexburg, ID</h2>
           <p class="home-paragraph-3">
-            address: 750 S 2nd E
-                    Rexburg ID 83440-5404
-                    United States
-            Telephone:(1)208-656-0880
-            email:
-            services: Clothing rental available
-                      No cafeteria available
-                      No patron housing available
-                      Distribution center nearby
-            history:
-            ordinance schedule: Ordinances for family names must be done in proper sequence—baptism, confirmation, 
+            <b>Address:</b> 750 S 2nd E<br>
+                    Rexburg ID 83440-5404<br>
+                    United States<br>
+            <b>Telephone:</b>(1)208-656-0880<br>
+            <b>Services:</b><br> 
+            -Clothing rental available<br>
+            -No cafeteria available<br>
+            -No patron housing available<br>
+            -Distribution center nearby<br>
+            <b>Ordinance Schedule:</b> Ordinances for family names must be done in proper sequence—baptism, confirmation, 
             Melchizedek Priesthood ordination (males), initiatory, endowment, and then sealing. 
             Please allow sufficient time to perform all the ordinances you wish to complete during your visit. 
-            For additional help and information, please call the temple.
-            session schedule:
-            temple closure schedule: 2022
-                                    -Saturday, 23 July 2022
-                                    -Saturday, 1 October 2022
-                                    -Wednesday, 23 November 2022 - Thursday, 24 November 2022
-                                    -Saturday, 24 December 2022
-                                    -Saturday, 31 December 2022
-                                    2023
-                                    -Saturday, 1 April 2023
-                                    -Tuesday, 4 July 2023
-                                    -Saturday, 22 July 2023
-                                    -Monday, 28 August 2023 - Monday, 11 September 2023
-                                    -Saturday, 7 October 2023
-                                    -Thursday, 23 November 2023 - Friday, 24 November 2023
-                                    -Tuesday, 26 December 2023
+            For additional help and information, please call the temple.<br>
+            <br><b>Temple Closure Schedule: <br>2022</b>
+                                    -Saturday, 23 July 2022<br>
+                                    -Saturday, 1 October 2022<br>
+                                    -Wednesday, 23 November 2022 - Thursday, 24 November 2022<br>
+                                    -Saturday, 24 December 2022<br>
+                                    -Saturday, 31 December 2022<br>
+                                    <b>2023</b><br>
+                                    -Saturday, 1 April 2023<br>
+                                    -Tuesday, 4 July 2023<br>
+                                    -Saturday, 22 July 2023<br>
+                                    -Monday, 28 August 2023 - Monday, 11 September 2023<br>
+                                    -Saturday, 7 October 2023<br>
+                                    -Thursday, 23 November 2023 - Friday, 24 November 2023<br>
+                                    -Tuesday, 26 December 2023<br>
           </p>
           <img
             class="home-right-img2"
@@ -183,30 +177,28 @@
           />
           <h2 class="home-headline-4">St. Louis, MO</h2>
           <p class="home-paragraph-4">
-            address: 12555 N Outer Forty Dr
-                    St. Louis MO 63141-8620
-                    United States
-            Telephone:(1)314-514-1122
-            email:
-            services:Clothing rental available
-                    No cafeteria available
-                    No patron housing available
-                    Distribution center nearby
-            history:
-            ordinance schedule: Ordinances for family names must be done in proper sequence—baptism, confirmation, 
+            <b>Address:</b> 12555 N Outer Forty Dr<br>
+                    St. Louis MO 63141-8620<br>
+                    United States<br>
+            <b>Telephone:</b>(1)314-514-1122<br>
+            <b>Services:</b><br>
+            -Clothing rental available<br>
+            -No cafeteria available<br>
+            -No patron housing available<br>
+            -Distribution center nearby<br>
+            <b>Ordinance Schedule:</b> Ordinances for family names must be done in proper sequence—baptism, confirmation, 
             Melchizedek Priesthood ordination (males), initiatory, endowment, and then sealing. 
             Please allow sufficient time to perform all the ordinances you wish to complete during your visit. 
-            For additional help and information, please call the temple.
-            session schedule:
-            temple closure schedule: 2022
-                                    -Monday, 29 August 2022 - Monday, 5 December 2022
-                                    -Saturday, 24 December 2022
-                                    -Saturday, 31 December 2022
-                                    2023
-                                    -Monday, 20 March 2023 - Monday, 3 April 2023
-                                    -Tuesday, 4 July 2023
-                                    -Monday, 18 September 2023 - Monday, 2 October 2023
-                                    -Wednesday, 22 November 2023 - Thursday, 23 November 2023
+            For additional help and information, please call the temple.<br>
+            <br><b>Temple Closure Schedule: <br>2022</b>
+                                    -Monday, 29 August 2022 - Monday, 5 December 2022<br>
+                                    -Saturday, 24 December 2022<br>
+                                    -Saturday, 31 December 2022<br>
+                                    <b>2023</b><br>
+                                    -Monday, 20 March 2023 - Monday, 3 April 2023<br>
+                                    -Tuesday, 4 July 2023<br>
+                                    -Monday, 18 September 2023 - Monday, 2 October 2023<br>
+                                    -Wednesday, 22 November 2023 - Thursday, 23 November 2023<br>
           </p>
           <img
             class="home-left-img2"
