--- a/temple-inn-suites/missionary.html
+++ b/temple-inn-suites/missionary.html
@@ -69,15 +69,11 @@
             <div class="miss-grid">
               <h2 class="miss-headline-1">Junior Suite</h2>
               <p class="miss-paragraph-1">
-                Dining area
-                living area
-                The Junior Suite. 
-                Junior suites are smaller than a regular suite but more importantly, 
-                typically don't have a solid separation between the bedrooms and living area. 
-                These suites have small living areas that are an extension of the bedroom space 
-                and don't come with dining areas. The good part of junior suites is that they're 
-                priced lower than regular suites and often have sofa beds so you can accommodate 
-                more guests.
+                <b>Sleeps:</b> 6 <br>
+                -This room features an open floor plan with easy access from living area and the bedrooms.
+                This will have a smaller living area than the Suite options below, in this room
+                they are an extention of the bedroom space and does not include a dining area. Comes with
+                an optional sofa bed.
               </p>
               <img
                 class="miss-right-img1"
@@ -86,11 +82,11 @@
               />
               <h2 class="miss-headline-2">Residential Suite</h2>
               <p class="miss-paragraph-2">
-                The Residential Suite. 
-                These are fully furnished suites in every sense of the word. 
-                Not only do you get a separate living room, dining room and one or 
-                more bathrooms, some suites also come with wet bars, fully stocked kitchens, 
-                in-suite washer dryer units, and even patios and terraces.
+                <b>Sleeps:</b> Up to 8 <br>
+                -These fully furnished suites come with a seperate living room from the 
+                bedroom spaces. They also include a dining area for eating and comfort and one 
+                or more bathrooms. Some may include fully stocked kitchens, in-suite dryer units,
+                and even patios and terraces.
               </p>
               <img
                 class="miss-left-img1"
@@ -99,13 +95,14 @@
               />
               <h2 class="miss-headline-3">Presidential Suite</h2>
               <p class="miss-paragraph-3">
-                The Presidential Suite. 
-                The absolute best suite in any hotel. 
-                Most hotels would usually carry only a few presidential or penthouse suites. 
-                Typically housed on the top floors, this is your ultra-lavish-architecture-digest-fancy-af 
-                suite with everything you can think of. Fabulous panoramic views, high-end toiletries, 
-                jetted tubs in bathrooms that look like spas, expansive living, dining and bedroom areas, 
-                entry foyers, private terraces and sometimes even private butlers!
+                <b>Sleeps:</b> 2-9 <br>
+                -This is the absolute best suite in the hotel!<br>
+                -This hotel only has a few Presidential Suites. This suite comes with anything you can 
+                think of, from expansing living areas, seperate dining area, fully stocked fridge and 
+                kitchen, blow dryer, high-end toiletries, jetted tubs in bathrooms that look like spas, 
+                in-suite washer and dryer units, entry foyers, private patios and/or terraces, fabulous
+                panoramic views and many other amenities. 
+                <br>-Some rooms come with private Butlers!
               </p>
               <img
                 class="miss-right-img2"
@@ -114,19 +111,13 @@
               />
               <h2 class="miss-headline-4">Connecting Suite</h2>
               <p class="miss-paragraph-4">
-                The Connecting Suite. 
-                Available only on Suiteness, connecting suites are suite configurations 
-                where more than one bedroom is connected to the living area of a suite. 
-                Some of these also feature one suite that connects to another suite. 
-                You see, most hotel suites are built with an attached room or suite that 
-                has a separate private entrance. Sadly, hotel reservation systems are 
-                outdated. So while these suites and rooms are attached,
-                they can only be sold separately and never together as a connecting suite. 
-                Until now, that is. A connecting suite is essentially the same as a 
-                regular full-sized suite that has more than one attached bedroom - only, 
-                less expensive. You're looking at anywhere between a $100 to even $1,000 
-                difference between a regular two-bedroom suite and a connecting two-bedroom 
-                suite. See what staying in a connecting suite is like with this virtual tour.
+                <b>Has 2+ rooms connected!</b><br>
+                -These rooms will be connected in the living area of the suites.<br>
+                -Connecting suites will almost always come cheaper than a regular 
+                two-bedroom suite.<br>
+                -These rooms will come stocked as standard rooms, the only different is 
+                the connected rooms so that your parties can navigate with each other 
+                more easily.
               </p>
               <img
                 class="miss-left-img2"
