--- a/temple-inn-suites/reception.html
+++ b/temple-inn-suites/reception.html
@@ -67,12 +67,38 @@
       <main>
         <h1 class="reception-heading">~Recption Info~</h1>
         <p id="reception-info">
-            Location:
-            Budget:
-            Amenities:
-            Food Options:
-            Setup:
+            <b>Location:</b> Hotel Gardens<br>
+            <b>Cost:</b> $1,000<br>
+            <b>Amenities:</b> <br>
+            -Gazibo<br>
+            -Tables<br>
+            -Chairs<br>
+            -Table Clothes (limited colors)<br>
+            -Chair Covers and Bows (limited colors)<br>
+            -Cake Cutting Supplies<br>
+            -Table Center Pieces<br>
+            -Chargers<br>
+            <b>Food Options:</b> Catering available, you are welcome to bring your own catering as well.<br>
+            <b>Setup:</b> Provided for by the Hotel staff.<br>
+            <br>
+            <b>Call and ask for any other special accommodations needed/wanted.</b>
+            <br>
+            <br><b>BIG THANKS FROM THE HOTEL AND STAFF!</b>
         </p>
+
+        <hr>
+
+        <div id="contact-info-missionary">
+            <div id="contact-box">
+              <h2>If you have any other questions<br>Contact</h2>
+              <p id="contact-info-p"><b>Temple Inn & Suites </b><br>
+                Address: 4800 Montgomery Ln #300, Bethesda, MD 20814<br>
+                Phone: +1 (410)-000-0000<br>
+                Email: Example@gmail.com<br>
+              </p>
+            </div>
+          </div>
+
       </main>
 
       <footer>
