--- a/temple-inn-suites/missionary.html
+++ b/temple-inn-suites/missionary.html
@@ -52,6 +52,7 @@
               alt="Youtube"
             /></a>
         </div>
+        <h1 class="hotel-name">Temple Inn & Suites</h1>
         <div class="current-date">
           <b><span id="date"></span></b>
         </div>
